# dead-snakes-scanner

./: README.md  dead_snakes_scanner.py  pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
tests/: test_scanner.py
